# Point_Cloud_Alignment

./: CMakeLists.txt  README.md
data/: Lion_ICP.xyz  Lion_trICP.xyz  fountain_ICP.xyz  fountain_rotation_0.xyz  fountain_rotation_10.xyz  fountain_rotation_20.xyz  fountain_trICP.xyz
src/: PC_ReaderWriter.cpp  PC_ReaderWriter.h  main.cpp  point_cloud_visualization.py
